# FastAPI-Scaffold

./: .dockerignore  .env.sample  .gitignore  Dockerfile  config.py  docker-compose.yaml  main.py  pyproject.toml  readme.md  template.md
.github/workflows/: cd.yaml  ci.yaml
alembic/: env.py
alembic/versions/: 03992e005c78_create_users_table.py  d14655895613_add_oauth2_support_make_password_hash_.py
app/api/core/: oauth.py  redis.py
app/api/core/dependencies/: auth.py  rate_limiter.py
app/api/db/: database.py
app/api/exceptions/: exceptions.py  handlers.py  register.py
app/api/utils/: build_auth_response.py  build_refresh_response.py  reset_password_otp_token.py  send_email.py  success_response.py  token.py  verification_otp_token.py
app/api/v1/models/: base.py  users.py
app/api/v1/routes/: __init__.py  auth.py  oauth.py  profile.py
app/api/v1/schemas/: auth.py  sucess_response.py  users.py
app/api/v1/services/: rate_limiter.py  (+1 more)
nginx/: default.conf
tests/: conftest.py  test_main.py
tests/core/: test_redis.py
tests/core/dependencies/: test_auth.py  test_rate_limiter.py
tests/db/: test_database.py
tests/exceptions/: test_handlers.py  test_register.py
tests/utils/: test_build_auth_response.py  test_build_refresh_response.py  test_reset_password_otp_token.py  test_send_email.py  test_success_response.py  test_token.py  test_verification_otp_token.py
tests/v1/models/: test_users.py
tests/v1/routes/: test_auth.py  test_oauth.py  test_profile.py
tests/v1/schemas/: test_auth.py
tests/v1/services/: test_rate_limiter.py  test_users.py
(+2 files in other folders)
